<resources>
    <string name="app_name">NotesHW</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view">View</string>
    <string name="settings">Settings</string>
    <string name="backup">Backup</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
</resources>